[gd_scene load_steps=11 format=3 uid="uid://cqtlaat786iaf"]

[ext_resource type="Script" uid="uid://c45qi30aa6n4w" path="res://Scripts/Objects/Button.gd" id="1_d1dk7"]
[ext_resource type="Shader" uid="uid://f5thhf6sh4p1" path="res://Shaders/ColorRectRoundedCorner.gdshader" id="2_msdqy"]
[ext_resource type="AudioStream" uid="uid://b464ubpboyv13" path="res://Assets/Sounds/SFX/ButtonDown.wav" id="3_msdqy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f15vc"]
shader = ExtResource("2_msdqy")
shader_parameter/rect_size = Vector2(200, 200)
shader_parameter/radius = 0.1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1dk7"]
size = Vector2(52.9782, 13.0536)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msdqy"]
size = Vector2(47.0539, 4.08057)

[sub_resource type="Animation" id="Animation_d1dk7"]
resource_name = "ButtonDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 0.690206), Vector2(3, 6.92923)]
}

[sub_resource type="Animation" id="Animation_f15vc"]
resource_name = "ButtonUp"
length = 0.37
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 6.92923), Vector2(3, 0.690206)]
}

[sub_resource type="Animation" id="Animation_msdqy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 0.690206)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f15vc"]
_data = {
&"ButtonDown": SubResource("Animation_d1dk7"),
&"ButtonUp": SubResource("Animation_f15vc"),
&"RESET": SubResource("Animation_msdqy")
}

[node name="Button" type="Node2D"]
scale = Vector2(1.64354, 1.64354)
script = ExtResource("1_d1dk7")

[node name="Button" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_f15vc")
offset_left = 3.0
offset_top = 0.690206
offset_right = 50.0
offset_bottom = 13.6902
color = Color(0.378232, 7.09929e-07, 2.16588e-07, 1)

[node name="Base" type="ColorRect" parent="."]
offset_top = 7.69021
offset_right = 53.0
offset_bottom = 19.6902
color = Color(0, 0, 0, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(10.3435, 10.3435)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(16.1556, 3.13525)
shape = SubResource("RectangleShape2D_d1dk7")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(26.5389, 2.07373)
shape = SubResource("RectangleShape2D_msdqy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f15vc")
}

[node name="Press" type="AudioStreamPlayer2D" parent="."]
position = Vector2(26.0565, 9.59978)
stream = ExtResource("3_msdqy")
pitch_scale = 3.03

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
